# Shoot

./: .gitignore  .gitmodules  .travis.yml  CLAUDE.md  CMakeLists.txt  game_log.txt  run_task.sh
.github/workflows/: cmake.yml  deploy_to_itch.yml
osx/: icons.icns  info.plist
res/: dialog_config.json  editor_config.json  editor_entities.json  editor_imgui.ini  editor_prefabs.json  empty_world.components  end_screen.components  game_config.json  level_config.json  pickup_config.json  player_config.json  region_config.json  spawn_config.json  title_screen.components  ui_config.json  user_config.json  weapon_config.json  world.components  world.objects  world.paths  world.polygons  world.prefabs  world.waves  world.world
res/configs/: damage_config.json  editor_config.json  game_config.json  level_config.json  mission_config.json  modifiers_config.json  perks_config.json  pickup_config.json  player_config.json  shop_config.json  sound_config.json  spawn_config.json  status_effect_config.json  ui_config.json  weapon_config.json
res/entities/: Fire_Skull.entity  Unknown.entity  all_entities.json  bird.entity  boss_circle_bullet.entity  bullet_boss_circle.entity  bullet_boss_long.entity  bullet_caco.entity  bullet_familiar.entity  bullet_fire_wobbly.entity  bullet_flak.entity  bullet_flak_homing.entity  bullet_green_blob.entity  bullet_laser.entity  bullet_plasma.entity  bullet_plasma_crimson.entity  bullet_rocket.entity  caco_bullet.entity  caco_explosion.entity  cacodemon.entity  cardboard_box.entity  circle_crosshair.entity  coin_pickup_100.entity  demon_minion.entity  demon_monster.entity  dropzone.entity  effect_shockwave.entity  explosion.entity  explosion_caco.entity  explosion_effect.entity  explosion_medium_3.entity  explosion_package.entity  explosion_rocket.entity  explosion_small.entity  explosion_splatter_small.entity  eye_monster_small.entity  familiar_bat.entity  familiar_brain_monster.entity  familiar_jellyfish.entity  flag.entity  (+69 more)
res/instructions/: gamepad_button_layout.kra  gamepad_button_layout.xcf  keyboard.kra  keyboard_layout.kra
res/paths/: New path.path  all_paths.json  center_loop.path  loop_1.path  new_path.path  right_most_loop.path  smaller_loop.path  tiny_loop.path
res/psd/: animator_tools.psd  cacodemon.psd  explosions.psd  placeholder.psd  spritesheet.psd
res/sound/: all_sounds.json
res/sprites/: add.sprite  aim_marker.sprite  alien.sprite  all_sprite_files.json  ammo_icon.sprite  ammo_icon_tiny.sprite  ammo_machinegun.sprite  ammo_pickup.sprite  arrow_pointer.sprite  banana_1.sprite  barrel_exploding.sprite  barrel_green.sprite  barrel_green_small.sprite  barrel_red.sprite  barrel_wood.sprite  bat.sprite  bat_medium.sprite  beast.sprite  beating_heart.sprite  beetle.sprite  bio_pickup_blue.sprite  bio_pickup_green.sprite  bio_pickup_red.sprite  bird_brown.sprite  blacksmith.sprite  blob.sprite  block_huge.sprite  block_large.sprite  block_small.sprite  blue_shield.sprite  board_1.sprite  board_2.sprite  board_one.sprite  board_small.sprite  board_two.sprite  bolter.sprite  bone_wand1.sprite  booster.sprite  boulder_1.sprite  boulder_2.sprite  (+442 more)
res/textures/: all_textures.json  studio_logo.kra  title_logo.xcf
res/waves/: wave1.json  wave2.json
res/worlds/: all_worlds.json  boss_arena.components  deep_forest.components  empty.components  empty_world.components  end_screen.components  enemy_testbed.components  game_over.components  global_conditions.json  global_triggers.json  horde_arena.components  mission_test.components  options_screen.components  pickup_arena.components  setup_game_screen.components  tiny_alien_world.components  tiny_arena.components  title_screen.components  title_screen_new.components  tutorial_delivery.components  world.components
scripts/: bake_sprites.py  embed_all_sprites.py  embed_to_h.py  generate_icons_file.py  run_both.sh  run_client.sh  run_server.sh
src/Animator/: Animator.cpp  Animator.h  InterfaceDrawer.cpp  InterfaceDrawer.h  SpriteOffsetDrawer.cpp  SpriteOffsetDrawer.h  UIContext.h  WriteSpriteFile.cpp  WriteSpriteFile.h  main.cpp
src/Editor/: Editor.cpp  Editor.h  EditorConfig.cpp  EditorConfig.h  EntityRepository.cpp  EntityRepository.h  FontIds.h  Grabber.h  ISelectionHandler.h  ImGuiInterfaceDrawer.cpp  ImGuiInterfaceDrawer.h  MainMenuOptions.h  ObjectFactory.cpp  ObjectFactory.h  Path.cpp  Path.h  Polygon.cpp  Polygon.h  Prefab.cpp  RenderLayers.h  Resources.cpp  Resources.h  SnapPoint.h  SpriteEntity.h  Textures.h  UIContext.h  UINotification.h  UserInputController.cpp  UserInputController.h  WorldSerializer.cpp  WorldSerializer.h  main.cpp
src/Editor/ObjectProxies/: ComponentProxy.cpp  ComponentProxy.h  EditorEntityAttributes.h  EntityProxy.cpp  EntityProxy.h  IObjectProxy.h  IObjectVisitor.h  PathEntity.cpp  PathEntity.h  PathProxy.cpp  PathProxy.h  PolygonProxy.cpp  PolygonProxy.h  PrefabProxy.cpp  PrefabProxy.h
src/Game/: AIKnowledge.cpp  AIKnowledge.h  BackgroundMusic.cpp  BackgroundMusic.h  Camera.cpp  Camera.h  CollisionConfiguration.h  DamageController.cpp  DamageController.h  DamageSystem.cpp  DamageSystem.h  DamageSystemTypes.h  EnemyLoader.cpp  EnemyLoader.h  EntityProperties.h  Explosion.cpp  Explosion.h  Factories.cpp  Factories.h  FontIds.cpp  FontIds.h  GameConfig.cpp  GameConfig.h  GameDebug.cpp  GameDebug.h  GameDebugDrawer.cpp  GameDebugDrawer.h  GameSystems.cpp  GameSystems.h  IDebugDrawer.h  Meteor.cpp  Meteor.h  PhysicsMaterialConfiguration.h  PlayerDaemon.cpp  PlayerDaemon.h  PlayerInfo.cpp  PlayerInfo.h  PositionPredictionSystem.cpp  PositionPredictionSystem.h  RenderLayers.h  (+29 more)
src/Shared/: AnimationModes.h  AnimationTypes.h  CollisionConfiguration.h  Component.cpp  Component.h  DefinedAttributes.h  EntityLogicTypes.h  FontIds.cpp  FontIds.h  InteractionType.h  ObjectAttribute.h  PickupTypes.h  Prefabs.cpp  Prefabs.h  Serialize.h  SpawnProperties.h  SpriteProperties.h  TriggerTypes.h  WorldFile.cpp  WorldFile.h
src/tests/: AIKnowledgeTest.cpp  HuffmanTest.cpp  NavmeshTest.cpp  NetworkSerializeTest.cpp  PredictionSystemTest.cpp  TilemapTest.cpp  main.cpp
(+597 files in other folders)
